# feature-status-cli

./: Cargo.toml  README.md
dir/: devnet.json  emit.rs.txt  mainnet-beta.json  testnet.json
src/: emit.rs  main.rs  status_report.rs
